--- a/catalog.html
+++ b/catalog.html
@@ -24,11 +24,11 @@
 
       <section class="filter-hotel">
         <!-- фоновое изображение img/catalog-bg.jpg -->
-        <h2 class="visually-hidden">Подбор гостиниц по критериям</h2>
+        <h2 class="visually-hidden" tabindex="0"  >Подбор гостиниц по критериям</h2>
 
-        <form class="form-filter" action="" method="">
+        <form class="form-filter" action="" method="GET" tabindex="0" aria-label="фильтр гостиниц">
           <fieldset class="form-filter__set">
-            <legend class="form-filter__legend">Инфраструктура:</legend>
+            <legend class="form-filter__legend" tabindex="0">Инфраструктура:</legend>
             <p class="form-filter__row">
               <input class="form-filter__input" type="checkbox" name="filter-pool" id="filter-pool" checked>
               <label class="form-filter__label" for="filter-pool">Бассейн</label>
@@ -44,7 +44,7 @@
           </fieldset>
 
           <fieldset class="form-filter__set">
-            <legend class="form-filter__legend">Тип жилья:</legend>
+            <legend class="form-filter__legend" tabindex="0">Тип жилья:</legend>
             <p class="form-filter__row">
               <input class="form-filter__input" type="checkbox" name="filter-hotel" id="filter-hotel" checked>
               <label class="form-filter__label" for="filter-hotel">Гостиница</label>
@@ -60,8 +60,9 @@
           </fieldset>
 
           <fieldset class="form-filter__set">
-            <legend class="form-filter__legend">Стоимость в сутки (Р):</legend>
+            <legend class="form-filter__legend" tabindex="0">Стоимость в сутки (Р):</legend>
             <input type="range" name="filter-price" id="filter-price">
+            <label for="filter-price" aria-label="выбор диапазона цен"></label>
             <span></span> <!-- изображение ползунка img/svg/filter-button.svg -->
           </fieldset>
           <button type="submit">Показать</button>
@@ -70,20 +71,20 @@
       </section>
 
       <section class="sorted-hotel">
-        <h2 class="visually-hidden">Сортированный список гостиниц</h2>
+        <h2 class="visually-hidden" tabindex="0">Сортированный список гостиниц</h2>
 
         <div class="sorted-hotel__found">
           <p class="sorted-hotel__quantity">Найдено: 3</p>
           <p class="sorted-hotel__sorting">Сортировка:</p>
           <ul class="sorted-hotel__list">
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link sorted-hotel__link--active">по цене</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="">по типу</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="">по рейтингу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__link sorted-hotel__link--active" aria-label="сортировка по цене">по цене</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="" aria-label="сортировка оп типу">по типу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="" aria-label="сортировка по рейтингу">по рейтингу</a></li>
           </ul>
-          <div class="sorted-hotel__direction">
-            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-up sorted-hotel__direction--active"></a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
-            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-down" href=""></a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
-          </div>
+          <p class="sorted-hotel__direction">
+            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-up sorted-hotel__direction--active" aria-label="сортировка по возрастанию" href=""></a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
+            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-down" aria-label="сортировка по убыванию" href=""></a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
+          </p>
         </div>
 
         <article class="sorted-hotel__article">
@@ -116,7 +117,7 @@
           </p>
           <div class="sorted-hotel__rating">
             <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
-            <p class="sorted-hotel__rating_text">Рейтинг: 8,5</p>
+            <p class="sorted-hotel__rating_text">Рейтинг: 8,9</p>
           </div>
         </article>
 
@@ -133,7 +134,7 @@
           </p>
           <div class="sorted-hotel__rating">
             <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
-            <p class="sorted-hotel__rating_text">Рейтинг: 8,5</p>
+            <p class="sorted-hotel__rating_text">Рейтинг: 9,2</p>
           </div>
         </article>
       </section>
@@ -143,9 +144,9 @@
       <p class="page-footer__social-hashtag">#visitSEDONA</p>
 
       <ul class="page-footer__social-list">
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_tw" href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_fb" href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_youtube" href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_tw" href="" aria-label="Седона в твитере">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_fb" href="" aria-label="Седона на фейсбуке">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link_youtube" href="" aria-label="Седона на ютубе">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
       </ul>
 
       <!-- логотип академии img/svg/logo-htmlacademy.svg -->
