--- a/catalog.html
+++ b/catalog.html
@@ -61,12 +61,21 @@
 
           <fieldset class="form-filter__set">
             <legend class="form-filter__legend" tabindex="0">Стоимость в сутки (Р):</legend>
-            <input type="range" name="filter-price" id="filter-price">
-            <label for="filter-price" aria-label="выбор диапазона цен"></label>
-            <span></span> <!-- изображение ползунка img/svg/filter-button.svg -->
-          </fieldset>
-          <button type="submit">Показать</button>
 
+            <form oninput="minPrice.value = filterPrice.valueAsNumber">
+              <input type="range" min="0" max="5000" value="0" step="100" name="filterPrice" id="filterPriceMin"> <!-- изображение ползунка img/svg/filter-button.svg -->
+              <output for="filterPriceMin" name="minPrice">0</output>
+              <label for="filterPriceMin" aria-label="выбор минимальной цены"></label>
+            </form>
+
+            <form oninput="maxPrice.value = filterPrice.valueAsNumber">
+              <input type="range" min="0" max="5000" value="3000" step="100" name="filterPrice" id="filterPriceMax"> <!-- изображение ползунка img/svg/filter-button.svg -->
+              <output for="filterPriceMax" name="maxPrice">3000</output>
+              <label for="filterPriceMax" aria-label="выбор максимальной цены"></label>
+            </form>
+          </fieldset>
+
+          <button type="submit">Показать</button>
         </form>
       </section>
 
