--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         <!-- фоновое изображение img/catalog-bg.jpg -->
         <h2 class="visually-hidden" tabindex="0"  >Подбор гостиниц по критериям</h2>
 
-        <form class="form-filter" action="" method="GET" tabindex="0" aria-label="фильтр гостиниц">
+        <form class="form-filter" action="https://echo.htmlacademy.ru/" method="GET" tabindex="0" aria-label="фильтр гостиниц">
           <fieldset class="form-filter__set">
             <legend class="form-filter__legend" tabindex="0">Инфраструктура:</legend>
             <p class="form-filter__row">
@@ -60,14 +60,28 @@
           </fieldset>
 
           <fieldset class="form-filter__set">
-            <input type="range" min="0" max="5000" value="0" step="100" name="filterPrice" id="filterPriceMin" oninput="minPrice.value = filterPriceMin.valueAsNumber">
-            <output for="filterPriceMin" name="minPrice" id="minPrice">0</output>
+            <legend class="form-filter__legend" tabindex="0">Стоимость в сутки (Р):</legend>
 
-            <input type="range" min="0" max="5000" value="3000" step="100" name="filterPrice" id="filterPriceMax" oninput="maxPrice.value = filterPriceMax.valueAsNumber">
-            <output for="filterPriceMax" name="maxPrice" id="maxPrice">3000</output>
+            <div class="form-filter__price-value">
+              <label class="form-filter__price form-filter__price--min">от
+                <input type="text" name="price-min" value="0">
+              </label>
+              <label class="form-filter__price form-filter__price--max">до
+                <input type="text" name="price-max" value="3000">
+              </label>
+            </div>
+
+            <div class="form-filter__price-range">
+              <div class="form-filter__scale">
+                <div class="form-filter__bar"></div>
+              </div>
+              <div class="form-filter__toggle form-filter__toggle--min"></div>
+              <div class="form-filter__toggle form-filter__toggle--max"></div>
+            </div>
+
+            <button type="submit">Показать</button>
           </fieldset>
 
-          <button type="submit">Показать</button>
         </form>
       </section>
 
@@ -75,67 +89,67 @@
         <h2 class="visually-hidden" tabindex="0">Сортированный список гостиниц</h2>
 
         <div class="sorted-hotel__found">
-          <p class="sorted-hotel__quantity">Найдено: 3</p>
+          <p class="sorted-hotel__quantity" tabindex="0">Найдено: 3</p>
           <p class="sorted-hotel__sorting">Сортировка:</p>
           <ul class="sorted-hotel__list">
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link sorted-hotel__link--active" aria-label="сортировка по цене">по цене</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="" aria-label="сортировка оп типу">по типу</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__link" href="" aria-label="сортировка по рейтингу">по рейтингу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort sorted-hotel__type-sort--active" aria-label="сортировка по цене">по цене</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="" aria-label="сортировка оп типу">по типу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="" aria-label="сортировка по рейтингу">по рейтингу</a></li>
           </ul>
           <p class="sorted-hotel__direction">
-            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-up sorted-hotel__direction--active" aria-label="сортировка по возрастанию" href=""></a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
-            <a class="sorted-hotel__direction sorted-hotel__direction--arrow-down" aria-label="сортировка по убыванию" href=""></a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--up sorted-hotel__arrow--active" aria-label="сортировка по возрастанию" href=""></a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--down" aria-label="сортировка по убыванию" href=""></a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
           </p>
         </div>
 
         <article class="sorted-hotel__article">
           <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Amara Resort & Spa</a></h3>
           <img class="sorted-hotel__foto" src="img/hotel-1.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
-          <p class="sorted-hotel__option">
+          <p class="sorted-hotel__description" tabindex="0" aria-label="Гостиница от 4000 рублей">
             <span class="sorted-hotel__option sorted-hotel__option--type">Гостиница</span>
             <span class="sorted-hotel__option sorted-hotel__option--price">от 4000 Р.</span>
           </p>
-          <p class="sorted-hotel__btn">
+          <p class="sorted-hotel__control">
             <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
-            <p class="sorted-hotel__rating_text">Рейтинг: 8,5</p>
+            <span class="sorted-hotel__star sorted-hotel__star--five"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <p class="sorted-hotel__text">Рейтинг: 8,5</p>
           </div>
         </article>
 
         <article class="sorted-hotel__article">
           <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Desert Quail Inn</a></h3>
           <img class="sorted-hotel__foto" src="img/hotel-2.jpg" width="135" height="90" alt="Фото гостиницы Desert Quail Inn">
-          <p class="sorted-hotel__option">
+          <p class="sorted-hotel__description" tabindex="0" aria-label="Мотель от 3000 рублей"></p>
             <span class="sorted-hotel__option sorted-hotel__option--type">Мотель</span>
             <span class="sorted-hotel__option sorted-hotel__option--price">от 3000 Р.</span>
           </p>
-          <p class="sorted-hotel__btn">
+          <p class="sorted-hotel__control">
             <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
-            <p class="sorted-hotel__rating_text">Рейтинг: 8,9</p>
+            <span class="sorted-hotel__star sorted-hotel__star--three"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <p class="sorted-hotel__text">Рейтинг: 8,9</p>
           </div>
         </article>
 
         <article class="sorted-hotel__article">
           <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Villas at Poco Diablo</a></h3>
           <img class="sorted-hotel__foto" src="img/hotel-2.jpg" width="135" height="90" alt="Фото гостиницы Villas at Poco Diablo">
-          <p class="sorted-hotel__option">
+          <p class="sorted-hotel__description" tabindex="0" aria-label="Апартаменты от 2000 рублей"></p>
             <span class="sorted-hotel__option sorted-hotel__option--type">Апартаменты</span>
             <span class="sorted-hotel__option sorted-hotel__option--price">от 2000 Р.</span>
           </p>
-          <p class="sorted-hotel__btn">
+          <p class="sorted-hotel__control">
             <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
             <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
           </p>
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
-            <p class="sorted-hotel__rating_text">Рейтинг: 9,2</p>
+            <span class="sorted-hotel__star sorted-hotel__star--two"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <p class="sorted-hotel__text">Рейтинг: 9,2</p>
           </div>
         </article>
       </section>
