--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Информация</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Фото и видео</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Карта штата</a></li>
-          <li class="page-header__menu-item"><a class="page-header__menu-link page-header__menu-link--current">Гостиницы</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +35,7 @@
           <li class="features__item">
             <h3 class="features__subheader">Настоящий городок</h3>
             <span class="features__number">№1</span>
-            <p class="features__description">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            <p class="features__description" tabindex="0">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="features__foto" src="img/feature-1.jpg" width="800" height="256" alt="Фотография городка Седона">
 
             <ul class="promo features__promo">
@@ -57,23 +57,23 @@
           <li class="features__item">
             <h3 class="features__subheader">Там есть мост дьявола</h3>
             <span class="features__number">№2</span>
-            <p class="features__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <p class="features__description" tabindex="0">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             <img class="features__foto" src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
           </li>
           <li class="features__item item">
             <h3 class="features__subheader">Небольшая площадь</h3>
             <span class="features__number">№3</span>
-            <p class="features__description">Все достопримечательности находяться очень близко</p>
+            <p class="features__description" tabindex="0">Все достопримечательности находяться очень близко</p>
           </li>
           <li class="features__item item">
             <h3 class="features__subheader">Красивая дорога</h3>
             <span class="features__number">№4</span>
-            <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="features__description" tabindex="0">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="features__item item">
             <h3 class="features__subheader">Мало туристов</h3>
             <span class="features__number">№5</span>
-            <p class="features__description">Большинство едет в Гранд Каньон и толпиться там</p>
+            <p class="features__description" tabindex="0">Большинство едет в Гранд Каньон и толпиться там</p>
           </li>
         </ol>
       </section>
@@ -86,7 +86,7 @@
         <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <button class="form-search-show" type="button">Поиск гостиницы в Седоне</button>
-        <form class="form-search" action="" method="GET" aria-label="Поиск готиницы в Седоне">
+        <form class="form-search" action="https://echo.htmlacademy.ru/" method="GET" aria-label="Поиск готиницы в Седоне">
           <div class="form-search__row">
             <label class="form-search__label" for="date-arrival">Дата заезда:</label>
             <input class="form-search__input" id="date-arrival" type="text">
