--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
         <article class="sorted-hotel__article">
           <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Desert Quail Inn</a></h3>
           <img class="sorted-hotel__foto" src="img/hotel-2.jpg" width="135" height="90" alt="Фото гостиницы Desert Quail Inn">
-          <p class="sorted-hotel__description" tabindex="0" aria-label="Мотель от 3000 рублей"></p>
+          <p class="sorted-hotel__description" tabindex="0" aria-label="Мотель от 3000 рублей">
             <span class="sorted-hotel__option sorted-hotel__option--type">Мотель</span>
             <span class="sorted-hotel__option sorted-hotel__option--price">от 3000 Р.</span>
           </p>
@@ -142,7 +142,7 @@
         <article class="sorted-hotel__article">
           <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Villas at Poco Diablo</a></h3>
           <img class="sorted-hotel__foto" src="img/hotel-2.jpg" width="135" height="90" alt="Фото гостиницы Villas at Poco Diablo">
-          <p class="sorted-hotel__description" tabindex="0" aria-label="Апартаменты от 2000 рублей"></p>
+          <p class="sorted-hotel__description" tabindex="0" aria-label="Апартаменты от 2000 рублей">
             <span class="sorted-hotel__option sorted-hotel__option--type">Апартаменты</span>
             <span class="sorted-hotel__option sorted-hotel__option--price">от 2000 Р.</span>
           </p>
