--- a/catalog.html
+++ b/catalog.html
@@ -34,15 +34,15 @@
           <fieldset class="form-filter__set">
             <legend class="form-filter__legend" tabindex="0">Инфраструктура:</legend>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-pool" id="filter-pool" checked>
+              <input class="form-filter__check" type="checkbox" name="filter-pool" id="filter-pool" checked>
               <label class="form-filter__label" for="filter-pool">Бассейн</label>
             </p>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-parking" id="filter-parking">
+              <input class="form-filter__check" type="checkbox" name="filter-parking" id="filter-parking">
               <label class="form-filter__label" for="filter-parking">Парковка</label>
             </p>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-wifi" id="filter-wifi">
+              <input class="form-filter__check" type="checkbox" name="filter-wifi" id="filter-wifi">
               <label class="form-filter__label" for="filter-wifi">WI-FI</label>
             </p>
           </fieldset>
@@ -50,15 +50,15 @@
           <fieldset class="form-filter__set">
             <legend class="form-filter__legend" tabindex="0">Тип жилья:</legend>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-hotel" id="filter-hotel" checked>
+              <input class="form-filter__check" type="checkbox" name="filter-hotel" id="filter-hotel" checked>
               <label class="form-filter__label" for="filter-hotel">Гостиница</label>
             </p>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-motel" id="filter-motel" checked>
+              <input class="form-filter__check" type="checkbox" name="filter-motel" id="filter-motel" checked>
               <label class="form-filter__label" for="filter-motel">Мотель</label>
             </p>
             <p class="form-filter__row">
-              <input class="form-filter__input" type="checkbox" name="filter-apartment" id="filter-apartment" checked>
+              <input class="form-filter__check" type="checkbox" name="filter-apartment" id="filter-apartment" checked>
               <label class="form-filter__label" for="filter-apartment">Апартаменты</label>
             </p>
           </fieldset>
@@ -68,10 +68,10 @@
 
             <div class="form-filter__price-value">
               <label class="form-filter__price form-filter__price--min">от
-                <input type="text" name="price-min" value="0">
+                <input type="form-filter__text" name="price-min" value="0">
               </label>
               <label class="form-filter__price form-filter__price--max">до
-                <input type="text" name="price-max" value="3000">
+                <input type="form-filter__text" name="price-max" value="3000">
               </label>
             </div>
 
@@ -83,7 +83,7 @@
               <div class="form-filter__toggle form-filter__toggle--max"></div>
             </div>
 
-            <button type="submit">Показать</button>
+            <button class="form-filter__submit" type="submit">Показать</button>
           </fieldset>
 
         </form>
