--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
 
     <main class="page-main">
       <h1 class="visually-hidden">Городок Седона - место впечатлений</h1>
-      <!-- фоновое изображение  img/index-bg.jpg -->
-      <!-- маска для фона img/svg/intro-mask.svg -->
-      <!-- приветствие на фоне img/svg/intro-welcome.svg -->
+      <section class="banner">
+        <!-- фоновое изображение  img/index-bg.jpg -->
+        <!-- маска для фона img/svg/intro-mask.svg -->
+        <!-- приветствие на фоне img/svg/intro-welcome.svg -->
+      </section>
 
       <section class="features">
-        <h2 class="features__header" tabindex="0">Преимущества городка Седона</h2>
+        <h2 class="visually-hidden" tabindex="0">Преимущества городка Седона</h2>
 
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="features__text features__text--big">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="features__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 
         <ol class="features__list">
@@ -86,8 +88,8 @@
         <!-- в форме используется изображение календаря img/svg/calendar.svg -->
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
-        <p>Заинтересовались?</p>
-        <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-hotel__text search-hotel__text--big">Заинтересовались?</p>
+        <p class="search-hotel__text">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <button class="form-search-show" type="button">Поиск гостиницы в Седоне</button>
         <form class="form-search" action="https://echo.htmlacademy.ru/" method="GET" aria-label="Поиск готиницы в Седоне">
@@ -105,7 +107,7 @@
             <label class="form-search__label" for="children-ticket">Дети:</label>
             <input class="form-search__input" id="children-ticket" type="number">
           </div>
-          <button type="submit">Найти</button>
+          <button class="form-search__submit" type="submit">Найти</button>
         </form>
 
         <img class="search-hotel__map" src="img/map.png" width="1200" height="594" alt="Карта как проехать к городку Седона">
